Fix game description alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,24 @@
+.project-header {
+  font-size: 2em;
+}
+
+.published {
+  margin: 0.5em 0em 0.5em 0em;
+  font-size: 0.5em;
+}
+
+.row {
+  margin-bottom: 0em;
+}
+
+// Rails Projects
+.project-description {
+  font-size: 0.7em;
+  line-height: 1.3em;
+  font-style: italic;
+  text-align: left;
+}
+
 ol {
   list-style-type: circle;
   padding: 0 0 0 2em;
@@ -10,22 +31,9 @@ ol li {
   font-size: 0.5em;
 }
 
-.project-description {
+// Games
+.game-description {
   font-size: 0.7em;
   line-height: 1.3em;
   font-style: italic;
-  text-align: left;
-}
-
-.project-header {
-  font-size: 2em;
-}
-
-.published {
-  margin: 0.5em 0em 0.5em 0em;
-  font-size: 0.5em;
-}
-
-.row {
-  margin-bottom: 0em;
 }
